squashing big fat bugs into littler bugs.

--- a/public/assets/styles/cart.scss
+++ b/public/assets/styles/cart.scss
@@ -77,10 +77,15 @@
         margin-left: -30px;
       }
     }
+
     .single-item {
       border: none;
     }
   }
+
+  .no-border {
+      border: none !important;
+    }
 
   .cart-total {
     margin-top: 20px;
