--- a/public/assets/styles/theme.scss
+++ b/public/assets/styles/theme.scss
@@ -7,7 +7,7 @@ body {
 .view-wrapper {
   padding-top: 110px;
   padding-bottom: 100px;
-  min-height: calc(100vh + 30px);
+  min-height: calc(100vh - 50px);
 }
 
 .title {
